--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
 
 <body>
   <header>
+    <div>
+      <marquee>
    <p>CALCULATOR</p>
+        </marquee>
+    </div>
   </header>
   <main>
   <div id="calc">
