--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <body>
   <header>
     <div>
-      <marquee>
+<!--       <marquee> -->
    <h1>CALCULATOR</h1>
-        </marquee>
+<!--         </marquee> -->
     </div>
   </header>
   <main>
